fix modal in dark mode

--- a/ui/public/storybook-overrides.css
+++ b/ui/public/storybook-overrides.css
@@ -18,7 +18,6 @@
 */
 .dark {
     --lightningcss-light: ;
-    --lightningcss-dark: ;
 
     background-color: var(--color-neutral-700);
     color: var(--color-neutral-300);
@@ -33,7 +32,6 @@
 @media (prefers-color-scheme: dark) {
     html {
         --lightningcss-light: ;
-        --lightningcss-dark: ;
 
         background-color: var(--color-neutral-700);
         color: var(--color-neutral-300);
