--- a/ui/src/css/components/modal.css
+++ b/ui/src/css/components/modal.css
@@ -1,6 +1,6 @@
 /* Cannot use existing CSS variables defined on :root element for ::backdrop. See https://stackoverflow.com/questions/58818299/css-variables-not-working-in-dialogbackdrop */
 ::backdrop {
-    --color-backdrop: oklch(0% 0 0 / 70%);
+    --color-backdrop: oklch(0% 0 0 / 80%);
 }
 
 /* Browser already applies "position: fixed" and "width: fit-content". */
@@ -38,4 +38,8 @@ dialog {
 /* Hide overflow on <body> when modal is open. */
 body:has(dialog[open]) {
     overflow: hidden;
+}
+
+body:not(:has(dialog[open])) {
+    overflow: initial;
 }
